GUISE-227: Modernize to Java 25 language features.
Applied modern Java idioms across mesh, mummy, and tomcat modules:

- Pattern matching `instanceof`: ~20 sites eliminate separate cast
  operations in flow control, `equals()` methods, and filters.
- Switch type patterns: `MeshIterator.toIterator()` 8-branch if-else
  and `AbstractPageMummifier.toLong()` now use `switch` expressions.
- Enhanced `switch` expressions: arrow-case syntax in 5 files removes
  fall-through risk and reduces noise (`NavigationManager`, `Route53`,
  `Dns`, `CloudFront`, `DirectoryWidget`).
- `Stream.toList()`: 11 sites replace `.collect(toList())`, removed 1
  unused Collectors import.
- `String.formatted()`: 67 sites replace `String.format()` calls,
  removed 5 `import static java.lang.String.format` declarations.
- Unnamed catch variables: CloudFront interrupt handler uses `_`.
- `DirectoryMummifier.mummify()`: converted to
  `checkArgumentIsInstance()` with TODO marking pre-existing
  format-argument bug (missing artifact parameter).
- `NavigationManager.loadNavigationFileTurf()`: added TODO for
  pre-existing format bug (missing navigationFile argument).

All modules compile and test cleanly. Plan document added at
dev/issues/GUISE-227/plans/2026-02-11-java25-modernization.md.